<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="honda.bookworm.View.AddBook_ViewHandler">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="25dp">

            <ImageView
                android:id="@+id/addbook_image"
                android:layout_width="170dp"
                android:layout_height="200dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/shape_empty_book"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/addbook_addimage_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="420dp"
                android:backgroundTint="@color/worm_skin"
                android:fontFamily="sans-serif-black"
                android:onClick="isAddImageButtonClicked"
                android:text="Add Image +"
                android:textAllCaps="false"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addbook_image" />


            <EditText
                android:id="@+id/addbook_booktitle_input"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/shape_rectangle_textborder"
                android:hint="Book title"
                android:inputType="text"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp"
                android:textSize="19sp"
                android:maxLength="45"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addbook_addimage_button" />


            <EditText
                android:id="@+id/addbook_ISBN_input"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/shape_rectangle_textborder"
                android:hint="ISBN"
                android:inputType="number"
                android:maxLength="13"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp"
                android:textSize="19sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addbook_booktitle_input" />

            <LinearLayout
                android:id="@+id/addbook_genre_input"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/shape_rectangle_textborder"
                android:paddingVertical="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addbook_ISBN_input">

                <Spinner
                    android:id="@+id/addbook_genre_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:spinnerMode="dialog" />
            </LinearLayout>


            <EditText
                android:id="@+id/addbook_description_input"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/shape_rectangle_textborder"
                android:hint="Description"
                android:inputType="textMultiLine"
                android:maxHeight="150dp"
                android:maxLength="5000"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp"
                android:textSize="19sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addbook_genre_input" />

            <CheckBox
                android:id="@+id/addbook_is_available_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="isAvailableToPurchaseClicked"
                android:text="Available to purchase"
                android:textSize="17dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addbook_description_input" />

            <TextView
                android:id="@+id/addbook_purchase_warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="3dp"
                android:text="@string/isPurchaseWarningMsg"
                android:textAlignment="center"
                android:textColor="@color/warning_red"
                android:textSize="12sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addbook_is_available_checkbox" />


            <Button
                android:id="@+id/addbook_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="18dp"
                android:backgroundTint="@color/inactive_grey"
                android:fontFamily="sans-serif-black"
                android:onClick="isCancelButtonClicked"
                android:text="Cancel"
                android:textAllCaps="false"
                android:textSize="16dp"
                app:layout_constraintRight_toLeftOf="@id/addbook_addtobook_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addbook_purchase_warning" />

            <Button
                android:id="@+id/addbook_addtobook_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="18dp"
                android:backgroundTint="@color/worm_skin"
                android:fontFamily="sans-serif-black"
                android:onClick="isAddBookButtonClicked"
                android:text="Add Book"
                android:textAllCaps="false"
                android:textSize="16dp"
                app:layout_constraintLeft_toRightOf="@id/addbook_cancel_button"
                app:layout_constraintTop_toBottomOf="@+id/addbook_purchase_warning" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</LinearLayout>
