<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context="honda.bookworm.View.Home_ViewHandler">

    <RelativeLayout
        android:id="@+id/home_top_bar"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@drawable/shape_fading_gradient"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:translationZ="5dp">

        <ImageView
            android:id="@+id/bookWormLogo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:importantForAccessibility="no"
            android:src="@mipmap/ic_launcher_foreground" />

        <ImageButton
            android:id="@+id/home_proceed_to_search"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentTop="true"
           android:layout_alignEnd="@+id/home_userProfile_button"
            android:layout_marginTop="20dp"
            android:layout_marginRight="55dp"
            android:background="@drawable/icon_search"
            android:backgroundTint="@color/inactive_grey"
            android:hapticFeedbackEnabled="true"
            android:onClick="onSearchPressed" />



        <ImageButton
            android:id="@+id/home_userProfile_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:contentDescription="search bar"
            android:background="@drawable/icon_person"
            android:backgroundTint="@color/inactive_grey"
            android:hapticFeedbackEnabled="true"
            android:onClick="onUserPressed" />





    </RelativeLayout>

    <LinearLayout
        android:id="@+id/home_userProfile_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal"
        android:translationY="65dp"
        android:elevation="12dp"
        android:translationZ="10dp"
        android:visibility="gone"
        android:background="@drawable/shape_rectangle_backdrop"
        android:layout_marginEnd="10dp"
        android:paddingVertical="5dp"
        android:paddingHorizontal="10dp"
        android:maxWidth="250dp"
        android:minWidth="175dp">

        <TextView
            android:id="@+id/home_user_fullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="User Full Name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="1dp"
            android:maxLines="3"
            android:maxWidth="175dp"
            android:layout_gravity="start"
            android:lineBreakWordStyle="phrase"
            />

        <TextView
            android:id="@+id/home_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="User_Name"
            android:textSize="15sp"
            android:layout_marginEnd="15dp"
            android:layout_gravity="start"
            />
        
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/inactive_grey"
            android:layout_marginVertical="5dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/home_userProfile_viewProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:rippleColor="@color/grass_green"
            android:text="View Profile"
            android:textAlignment="center"
            android:textColor="#61676D"
            android:onClick="onViewProfilePressed"
            android:background="@drawable/button_ripple" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/home_userProfile_logoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textAlignment="center"
            android:textColor="#61676D"
            android:onClick="onLogoutPressed"
            android:background="@drawable/button_ripple"
            />
    </LinearLayout>


    <ScrollView
        android:id="@+id/home_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scrollbars="none"
        android:overScrollMode="always"
        >

        <LinearLayout
            android:id="@+id/home_linear_content_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="10dp"
            android:paddingTop="75dp"
            android:paddingBottom="25dp"
            android:orientation="vertical">
        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>